--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "core-js": "^2.6.5",
     "vue": "^2.6.10",
-    "vue-meta": "^2.3.0",
     "vue-router": "^3.1.3",
-    "vuetify": "^2.0.0",
+    "vuetify": "^2.1.1",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
